MTL/NIOS_MTL/workspace1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:17:05 **** Clean-only build of configuration Nios II for project qbert_game_6_cubes ****
make clean 
[qbert_game_6_cubes clean complete]
21:17:44 **** Build of configuration Nios II for project qbert_game_6_cubes ****
make all 
Info: Building ../qbert_game_6_cubes_bsp/
C:/altera/15.0/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../qbert_game_6_cubes_bsp/
[BSP build complete]
Info: Compiling hello_world.c to obj/default/hello_world.o
nios2-elf-gcc -xc -MP -MMD -c -I../qbert_game_6_cubes_bsp//HAL/inc -I../qbert_game_6_cubes_bsp/ -I../qbert_game_6_cubes_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx  -o obj/default/hello_world.o hello_world.c
In file included from hello_world.c:25:0:
hello_world.c: In function 'main':
hello_world.c:50:17: error: 'QBERT_MOVE_0_BASE' undeclared (first use in this function)
   IOWR_32DIRECT(QBERT_MOVE_0_BASE, 24, qbertj);
                 ^
../qbert_game_6_cubes_bsp//HAL/inc/io.h:51:23: note: in definition of macro '__IO_CALC_ADDRESS_DYNAMIC'
   ((void *)(((alt_u8*)BASE) + (OFFSET)))
                       ^
hello_world.c:50:3: note: in expansion of macro 'IOWR_32DIRECT'
   IOWR_32DIRECT(QBERT_MOVE_0_BASE, 24, qbertj);
   ^
hello_world.c:50:17: note: each undeclared identifier is reported only once for each function it appears in
   IOWR_32DIRECT(QBERT_MOVE_0_BASE, 24, qbertj);
                 ^
../qbert_game_6_cubes_bsp//HAL/inc/io.h:51:23: note: in definition of macro '__IO_CALC_ADDRESS_DYNAMIC'
   ((void *)(((alt_u8*)BASE) + (OFFSET)))
                       ^
hello_world.c:50:3: note: in expansion of macro 'IOWR_32DIRECT'
   IOWR_32DIRECT(QBERT_MOVE_0_BASE, 24, qbertj);
   ^
make: *** [obj/default/hello_world.o] Error 1
21:18:56 **** Build of configuration Nios II for project qbert_game_6_cubes ****
make all 
Info: Building ../qbert_game_6_cubes_bsp/
C:/altera/15.0/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../qbert_game_6_cubes_bsp/
[BSP build complete]
Info: Compiling hello_world.c to obj/default/hello_world.o
nios2-elf-gcc -xc -MP -MMD -c -I../qbert_game_6_cubes_bsp//HAL/inc -I../qbert_game_6_cubes_bsp/ -I../qbert_game_6_cubes_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx  -o obj/default/hello_world.o hello_world.c
Info: Linking qbert_game_6_cubes.elf
nios2-elf-g++  -T'../qbert_game_6_cubes_bsp//linker.x' -msys-crt0='../qbert_game_6_cubes_bsp//obj/HAL/src/crt0.o' -msys-lib=hal_bsp -L../qbert_game_6_cubes_bsp/  -msmallc  -Wl,-Map=qbert_game_6_cubes.map   -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx  -o qbert_game_6_cubes.elf obj/default/hello_world.o -lm -msys-lib=m
nios2-elf-insert qbert_game_6_cubes.elf --thread_model hal --cpu_name cpu --qsys true --simulation_enabled false --id 0 --sidp 0x11450 --timestamp 1459274628 --stderr_dev jtag_uart_0 --stdin_dev jtag_uart_0 --stdout_dev jtag_uart_0 --sopc_system_name nios_mtl --quartus_project_dir "C:/Users/Stephane/Documents/GitHub/M1_PELEC/MTL/NIOS_MTL" --jdi C:/Users/Stephane/Documents/GitHub/M1_PELEC/MTL/NIOS_MTL/software/qbert_game_6_cubes_bsp/../../DE0_NANO.jdi --sopcinfo C:/Users/Stephane/Documents/GitHub/M1_PELEC/MTL/NIOS_MTL/software/qbert_game_6_cubes_bsp/../../nios_mtl.sopcinfo
Info: (qbert_game_6_cubes.elf) 6616 Bytes program size (code + initialized data).
Info:                          12 KBytes free for stack + heap.
Info: Creating qbert_game_6_cubes.objdump
nios2-elf-objdump --disassemble --syms --all-header --source qbert_game_6_cubes.elf >qbert_game_6_cubes.objdump
[qbert_game_6_cubes build complete]
21:20:10 **** Incremental Build of configuration Nios II for project qbert_game_6_cubes ****
make all 
Info: Building ../qbert_game_6_cubes_bsp/
C:/altera/15.0/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../qbert_game_6_cubes_bsp/
[BSP build complete]
[qbert_game_6_cubes build complete]
